--- a/style.css
+++ b/style.css
@@ -71,10 +71,14 @@ nav ul {
     display: flex;
     justify-content: center;
     margin: 1em 0;
+    padding: 0;
+    list-style: none;
 }
 
 nav li {
     margin-left: 1em;
+    border: 1px solid magenta;
+    
 }
     
 
