--- a/style.css
+++ b/style.css
@@ -72,11 +72,11 @@ nav ul {
     justify-content: center;
     padding: 0;
     list-style: none;
+    margin: 1em;
 }
 
 nav li {
     margin-left: 1em;
-    
 }
     
 
