--- a/style.css
+++ b/style.css
@@ -1,302 +1,281 @@
-* {
+body {
     margin: 0;
     padding: 0;
+    font-family: 'ubuntu', sans-serif;
     box-sizing: border-box;
-}
-
-body {
-    font-family: 'Ubuntu', sans-serif;
+    font-size: 1rem;
     line-height: 1.6;
     letter-spacing: .7px;
-}
-
-
-
-/*Typography*/
-
-h1,
-h2,
-h3 {
-    font-family: 'Lora', serif;
-    color: #143774;
-}
-h2,
-p,
-strong,
-.subtitle {
-    font-weight: 700;
-}
-
-.subtitle {
-    font-size: .8rem;
-    margin-top: 0;
-
-}
-
-.subtitle,
-.link {
-    color: #1792d2;
-}
-
-h1 {
-    font-family: 'lora' sans-serif;
-    font-size: 2rem;
-    font-weight: 400;
-    margin: 0;
-}
-
-h2 {
+ }
+ 
+ img {
+   max-width: 100%;
+   display: block;
+ }
+ 
+ .image-full {
+   width: 100%;
+   max-height: 300px;
+   object-fit: cover;
+   margin-bottom: 2em;
+ }
+        /*==================
+             TYPOGRAPHY
+         ==================*/
+ 
+ h1,
+ h2,
+ h3 {
+     color: #143774;
+     font-weight: 300;
+     margin: 0;
+     
+ }
+ 
+ h1 {
+   font-size: 2rem;
+   font-family: 'Lora', serif;
+   margin: 0 ;
+   font-weight: 300;
+ }
+ 
+ h2 {
    font-size: 1.5rem;
-   font-weight: 700;
-   margin-top: 1em;
-}
-
-p {
-    font-size: 1rem;
-    color: #707070;
-    font-weight: 300;
-    margin: 1em 0;
-    line-height: 24px;
-}
-
-h3 {
-    margin-top: 1em;
-}
-
-strong {
-    color: #302c2c;
-}
-
-
-a {
-    color: #1792d2;
-    
-}
-
-footer {
-    background-color: #143774;
+ 
+ }
+ 
+ .span-link {
+   color: #143774;
+   text-decoration: none;
+ }
+ 
+ .span-link:hover,
+ .span-link:focus {
+   color: #1792d2;
+   text-decoration: underline;
+ }
+ 
+ .article-read-more,
+ .article-info {
+   font-size: .875rem;
+ }
+ 
+ .article-read-more {
+   color: #1792d2;
+   text-decoration: none;
+   
+ }
+ 
+ .article-read-more:hover,
+ .article-read-more:focus {
+   color: #143774;
+   text-decoration: underline;
+ }
+ 
+ header {
+   background: #e4e1e1;
     text-align: center;
-    padding: 1.5em 0;
-}
-
-img {
-    max-width: 100%;
-    display: block;
-  }
-
-.image-full {
-    width: 100%;
-    max-height: 250px;
-    object-fit: cover;
-}
-
-
-/*Navigation*/
-
-nav ul {
-    display: flex;
-    justify-content: center;
-    padding: 0;
+   padding: 1.5rem;
+   margin-bottom: 3em;
+ }
+ 
+ .subtitle {
+   color: #1792d2;
+   font-weight: 700;
+   font-size: .75rem;
+   margin: 0;
+ }
+ .widget-title,
+ .widget-recent-post-title {
+   font-size: 1em;
+ }
+ 
+ .widget-title {
+   font-weight: 700;
+ }
+ 
+          /*=============
+            NAVIGATION
+          ===============*/
+ 
+ nav ul {
     list-style: none;
-    margin: 1em;
-}
-
-nav li {
-    margin-left: 1em;
-}
-    
-
-nav a {
-   font-size: 1rem;
-   color: #707070;
-   font-weight: 700; 
-   padding-bottom: .3em;
-}
-
-nav a:hover,
-nav a:focus {
-    color: #1792d2;
-}
-
-.current-page {
-    border-bottom: 1.5px solid #707070;
-}
-
-.current-page:hover {
-    color: #707070;
-}
-
-.read-more {
-   margin: 1em 0; 
-}
-
-
-
-
-/*====containers/links===*/
-
-.container {
-    width: 90%;
-    max-width: 900px;
-    margin: 0 auto;
-}
-
-.container-flex {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-}
-
-header {
-    background-color: #f8f8f8;
-    padding: 2em 0;
-    text-align: center;
-}
-
-
-
-.base {
-    color: #f8f8f8; 
-    font-size: 1rem;
-    font-weight: 300;
-    margin: .1em 0;
-}
-
-.link,
-.read-more {
-    font-size: 0.85rem;
+    justify-content: center;
+    padding: 0;
+    margin-top: .5em;
  }
-
- .link {
-    margin: 2em 0;
+ 
+ nav li {
+  margin: .5em 0;
  }
-
- main,
- aside {
-    margin-top: 2em;
+ 
+ nav a {
+   color: #707070;
+   text-decoration: none;
+   font-weight: 700;
+   padding: .25em 0;
  }
-
+ 
+ nav a:hover,
+ nav a:focus {
+  color: #1792d2;
+ }
+ 
+ .home {
+   border-bottom: 1px solid #707070;
+ }
+ 
+ .home:hover,
+ .home:focus{
+   color: #707070;
+ }
+ 
+ 
+        /* =============
+             LAYOUT
+         ============*/
+ 
+ .container {
+   width: 90%;
+   max-width: 900px;
+   margin: 0 auto;
+ }        
+ 
+ footer {
+   background: #143774;
+   color: #e4e1e1;
+   text-align: center;
+   padding: .5em 0;
+ }
+ 
+ .container-flex {
+   display: flex;
+   flex-direction: column;
+ }
+ 
+ 
+ 
+             /* ARTICLE */
+ 
+    .article-featured {
+       border-bottom: #707070 1px solid;
+       padding-bottom: 2em;
+       margin-bottom: 2em;
+    }         
+    .article-featured{
+       display: flex;
+       flex-direction: column;
+    }
+ 
+    .article-image {
+       order: -2;
+    }
+ 
+    .article-info {
+     order: -1;
+    }
+ 
+    .article-recent {
+     display: flex;
+     flex-direction: column;
+     margin-bottom: 3em;
+    }
+ 
+   .article-recent-main {
+     order: 2;
+   }
+   .article-recent-secondary {
+     order: 1;
+   }
+ 
+    
+       
+     .article-image {
+       width: 100%;
+       min-height: 200px;
+       object-fit: cover
+     }
+       
+          /* WIDGET */
+ 
+ .sidebar-widget {
+   border: 1.5em solid #e4e1e1;
+   margin-bottom: 1em;
+   padding: 1em;
+ }         
+     
+ .widget-recent-post {
+   display: flex;
+   flex-direction: column;
+   border-bottom: 1px solid #707070;
+   padding-bottom: 1em;
+   margin-bottom: 1em;
+ }
+ 
+ .widget-recent-post:last-child {
+   border: 0;
+   margin: 0;
+ }
+ 
+ .widget-image {
+   order: -1;
+ }
+  
+          /* FOOTER */
+   
+  .footer,
+  .footer-email {
+   font-size: 1rem;
+  }       
+ 
+  .footer-email {
+   margin-bottom: 0;
+  }
+  
+  .footer {
+   margin: 0;
+  }
  
 
-/*=======layout======*/
+/*===media queries===*/
 
-    .article-featured {
-        display: flex;
-        flex-direction: column;
-        border-bottom: 1px solid #787878;
-        margin-bottom: 2em;
-    }
-
-    .featured-heading {
-       order: 0;
-    }
-
-    .images-featured {
-       order: -1;
-    }
-     
-    .article-recent {
-        display: flex;
-        flex-direction: column;
-        margin: 1em 0;
+@media (min-width: 675px) {
+    .container-flex {
+      flex-direction: row;
+      justify-content: space-between;
     }
     
-    .article-recent-head {
-        order: 2;
-    }
-
-    .article-recent-body {
-       order: 1;
-    }
-
-    .article-info {
-        margin: 1em 0;
-        font-size: .75rem;
-        font-weight: 300;
-    }
-
-    .article-body,
-    .aside-body {
-        color: #707070;
-        font-size: 1rem;
-        font-weight: lighter;
-        margin: 1em 0;
-    }
-
-    .article-body {
-        line-height: 25px;
-    }
-    .images-recent {
-        width: 100%;
-        min-height: 200px;
-        object-fit: cover;
-    }
-
-    
-
-      /*aside-bar*/
-
-      .aside-bar {
-        border: 18px solid lightgrey;
-        margin: 1em 0;
-        padding: 1.5em;
-      }
-
-      .aside-bar-widget {
-        border-bottom: 1px solid #707070;
-      }
+    nav ul {
+      flex-direction: row;
       
-      .aside-images {
-        margin-top: 1.5em;
-      }
-
-      .aside-bar-widget:last-child {
-        border-bottom: none;
-      }
-
-
-      /*======media queries=======*/
-
-      @media (max-width: 675px) {
-        nav ul {
-            flex-direction: column;
-        }
-        
-        nav li {
-            padding: .5em 0;
-        }
-       }
-
-
-       @media (min-width: 675px) {
-        .container-flex {
-            flex-direction: row;
-        }
-    
-        main {
-            width: 68%;
-        }
-    
-        aside {
-            width: 25%;
-            min-width: 250px;
-            padding-left: 1.5em;
-        }
-
-        .article-recent {
-            flex-direction: row;
-            justify-content: space-between;
-        }
-
-       .article-recent-body {
-            width: 25%;
-       }
-
-       .article-recent-head {
-            width: 70%;
-       }
+    }
+  
+    nav li {
+       margin-left: 2em;
+    }
+  
+    main {
+      width: 65%;
     }
 
+    aside {
+       width: 30%;
+       min-width: 245px;
+       padding-left: 1em;
+    }
+  
+    .article-recent {
+      flex-direction: row;
+      justify-content: space-between;
+    }
 
+    .article-recent-main {
+       width: 65%;
+    }
 
-
+    .article-recent-secondary {
+        width: 30%;
+    }
+  }
